// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSchedule should render ltr radio schedules correctly 1`] = `
.emotion-137 {
  padding: 0;
  margin: 0;
}

@media (max-width:14.9375rem) {
  .emotion-137 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-137 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-137 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .emotion-137 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
      padding: 0 1rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-137 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}
}

.emotion-35 {
  position: relative;
  padding-bottom: 1rem;
}

@media (max-width:14.9375rem) {
  .emotion-35 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-35 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-35 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-35 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-35 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-35 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-35 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}

@media (min-width:80rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-35 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-6 {
  padding-bottom: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.25rem;
}

.emotion-0 > svg {
  color: #5A5A5A;
  margin: 0;
  overflow: visible;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.emotion-2 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-2::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-left: 0.625rem;
  width: 100%;
}

.emotion-32 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-22 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-18 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-16 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-16:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-16:hover,
.emotion-16:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-16:visited {
  color: #6E6E73;
}

.emotion-16:hover .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-16:focus .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-20 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-30 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-30 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-30 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-30 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-24 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.emotion-28 {
  padding-left: 0.5rem;
}

.emotion-63 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-63 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-63 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-63 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-117 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #6E6E73;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-117 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-117 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-111 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #11708C;
  display: inline-block;
  margin-right: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-111 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-111 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-115 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-115 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-115 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-129 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  outline: 0.0625rem solid transparent;
  color: #11708C;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-129 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-129 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-129 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-123 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

<div>
  <div
    class="emotion-136 emotion-137 emotion-36"
    dir="ltr"
    role="list"
  >
    <li
      class="emotion-34 emotion-35 emotion-36"
      data-e2e="live"
      dir="ltr"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-32 emotion-33"
      >
        <div
          class="emotion-22 emotion-23"
        >
          <h3
            class="emotion-18 emotion-19"
          >
            <a
              class="emotion-16 emotion-17"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    aria-hidden="true"
                    class="emotion-8 emotion-9"
                    dir="ltr"
                  >
                    LIVE 
                  </span>
                  <span
                    class="emotion-10 emotion-11"
                    lang="en-GB"
                  >
                    Live, 
                  </span>
                </span>
                Could a computer ever create better art than a human?
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="emotion-14 emotion-15"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-20 emotion-21"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="emotion-30 emotion-31"
        >
          <span
            class="emotion-24 emotion-25"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-28 emotion-29"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-10 emotion-11"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-34 emotion-35 emotion-36"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-32 emotion-33"
      >
        <div
          class="emotion-22 emotion-23"
        >
          <h3
            class="emotion-18 emotion-19"
          >
            <a
              class="emotion-16 emotion-17"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="emotion-14 emotion-15"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-20 emotion-21"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="emotion-63 emotion-31"
        >
          <span
            class="emotion-24 emotion-25"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-28 emotion-29"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-10 emotion-11"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-34 emotion-35 emotion-36"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-32 emotion-33"
      >
        <div
          class="emotion-22 emotion-23"
        >
          <h3
            class="emotion-18 emotion-19"
          >
            <a
              class="emotion-16 emotion-17"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="emotion-14 emotion-15"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-20 emotion-21"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="emotion-63 emotion-31"
        >
          <span
            class="emotion-24 emotion-25"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-28 emotion-29"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-10 emotion-11"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-34 emotion-35 emotion-36"
      data-e2e="next"
      dir="ltr"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-32 emotion-33"
      >
        <div
          class="emotion-22 emotion-23"
        >
          <h3
            class="emotion-117 emotion-19"
          >
            <span
              role="text"
            >
              <span
                class="emotion-111 emotion-112"
                dir="ltr"
              >
                NEXT 
              </span>
              Could a computer ever create better art than a human?
              <span
                class="emotion-10 emotion-11"
              >
                , 
                14:54
                , 
              </span>
              <span
                class="emotion-115 emotion-15"
              >
                27 August 2019
              </span>
            </span>
          </h3>
          <p
            class="emotion-20 emotion-21"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="emotion-129 emotion-31"
        >
          <span
            class="emotion-123 emotion-25"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-28 emotion-29"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-10 emotion-11"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`RadioSchedule should render rtl radio schedules correctly 1`] = `
.emotion-135 {
  padding: 0;
  margin: 0;
}

@media (max-width:14.9375rem) {
  .emotion-135 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-135 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-135 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .emotion-135 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
      padding: 0 1rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-135 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}
}

.emotion-33 {
  position: relative;
  padding-bottom: 1rem;
}

@media (max-width:14.9375rem) {
  .emotion-33 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-33 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-33 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-33 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-33 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-33 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-33 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}

@media (min-width:80rem) {
    .emotion-33 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-33 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-6 {
  padding-bottom: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-30 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-20 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-14 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-14:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-14:hover,
.emotion-14:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:visited {
  color: #6E6E73;
}

.emotion-14:hover .emotion-13 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:focus .emotion-13 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-22 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.emotion-121 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.25rem;
}

.emotion-0 > svg {
  color: #5A5A5A;
  margin: 0;
  overflow: visible;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.emotion-2 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-2::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-right: 0.625rem;
  width: 100%;
}

.emotion-16 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #222222;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-16 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-8 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-left: 0.5rem;
}

.emotion-12 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-12 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-18 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.25rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

.emotion-28 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-28 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-28 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-28 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-26 {
  padding-right: 0.5rem;
}

.emotion-61 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-61 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-61 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-61 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-115 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #6E6E73;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-115 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-115 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-109 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #11708C;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-109 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-109 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-113 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-113 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-113 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-127 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  outline: 0.0625rem solid transparent;
  color: #11708C;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-127 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-127 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-127 {
    background-color: transparent;
    outline: none;
  }
}

<div>
  <div
    class="emotion-134 emotion-135 emotion-34"
    dir="rtl"
    role="list"
  >
    <li
      class="emotion-32 emotion-33 emotion-34"
      data-e2e="live"
      dir="rtl"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-20 emotion-21"
        >
          <h3
            class="emotion-16 emotion-17"
          >
            <a
              class="emotion-14 emotion-15"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    class="emotion-8 emotion-9"
                    dir="rtl"
                  >
                    مباشر 
                  </span>
                </span>
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="emotion-12 emotion-13"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-18 emotion-19"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="emotion-28 emotion-29"
        >
          <span
            class="emotion-22 emotion-23"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-26 emotion-27"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-10 emotion-11"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-32 emotion-33 emotion-34"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-20 emotion-21"
        >
          <h3
            class="emotion-16 emotion-17"
          >
            <a
              class="emotion-14 emotion-15"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="emotion-12 emotion-13"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-18 emotion-19"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="emotion-61 emotion-29"
        >
          <span
            class="emotion-22 emotion-23"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-26 emotion-27"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-10 emotion-11"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-32 emotion-33 emotion-34"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-20 emotion-21"
        >
          <h3
            class="emotion-16 emotion-17"
          >
            <a
              class="emotion-14 emotion-15"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-10 emotion-11"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="emotion-12 emotion-13"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="emotion-18 emotion-19"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="emotion-61 emotion-29"
        >
          <span
            class="emotion-22 emotion-23"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-26 emotion-27"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-10 emotion-11"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="emotion-32 emotion-33 emotion-34"
      data-e2e="next"
      dir="rtl"
      role="listitem"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-0 emotion-1"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="emotion-2 emotion-3"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="emotion-30 emotion-31"
      >
        <div
          class="emotion-20 emotion-21"
        >
          <h3
            class="emotion-115 emotion-17"
          >
            <span
              role="text"
            >
              <span
                class="emotion-109 emotion-110"
                dir="rtl"
              >
                مباشر 
              </span>
              لماذا يخجل البعض من اسم قريته في مصر؟
              <span
                class="emotion-10 emotion-11"
              >
                , 
                ١٤:٥٤
                , 
              </span>
              <span
                class="emotion-113 emotion-13"
              >
                ٢٧ أغسطس ٢٠١٩
              </span>
            </span>
          </h3>
          <p
            class="emotion-18 emotion-19"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="emotion-127 emotion-29"
        >
          <span
            class="emotion-121 emotion-23"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="emotion-26 emotion-27"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-10 emotion-11"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
  </div>
</div>
`;
